syntax = "proto3";

package article.v1alpha;

import "article/v1alpha/message.proto";

message AddCommentRequest {
  int32 article_id = 1;
  string content = 2;
}

message AddCommentResponse {
  Comment comment = 1;
}

message RemoveCommentRequest {
  int32 id = 1;
}

message RemoveCommentResponse {
  Comment comment = 1;
}

message UpdateCommentRequest {
  int32 id = 1;
  string content = 2;
}

message UpdateCommentResponse {
  Comment comment = 1;
}

message ListArticlesRequest {}

message ListArticlesResponse {
  repeated Article articles = 1;
}

message GetArticleRequest {
  int32 id = 1;
}

message GetArticleResponse {
  ArticleWithComments article = 1;
}

message CreateArticleRequest {
  string title = 1;
  string content = 2;
}

message CreateArticleResponse {
  Article article  = 1;
}

message UpdateArticleRequest {
  int32 id = 1;
  string title = 2;
  string content = 3;
}

message UpdateArticleResponse {
  Article article  = 1;
}

message DeleteArticleRequest {
  int32 id = 1;
}

message DeleteArticleResponse {
  Article article  = 1;
}